--- a/BCientificas/Web.config
+++ b/BCientificas/Web.config
@@ -10,9 +10,7 @@
     <httpRuntime targetFramework="4.7.2"/>
   </system.web>
   <connectionStrings>
-    <add name="ServiciosWeb" connectionString="Data Source=405-15\VEEAMSQL2012;Initial Catalog=Vivero;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="Seguridad" connectionString="Data Source=405-15\VEEAMSQL2012;Initial Catalog=aspnetdb;Integrated Security=True"
+    <add name="ServiciosWeb" connectionString="Data Source=LAPTOP-Q44HTTJR\LOCALHOST;Initial Catalog=Vivero;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.codedom>
