--- a/BCientificas/BCientificas.csproj
+++ b/BCientificas/BCientificas.csproj
@@ -68,6 +68,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="BitacoraExperimental.aspx" />
+    <Content Include="Proyecto.aspx" />
+    <Content Include="ProyectoActualizado.aspx" />
+    <Content Include="RamasCientificas.aspx" />
+    <Content Include="Roles.aspx" />
+    <Content Include="RolesEditar.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -86,6 +91,41 @@
       <DependentUpon>Principal.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Proyecto.aspx.cs">
+      <DependentUpon>Proyecto.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Proyecto.aspx.designer.cs">
+      <DependentUpon>Proyecto.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ProyectoActualizado.aspx.cs">
+      <DependentUpon>ProyectoActualizado.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ProyectoActualizado.aspx.designer.cs">
+      <DependentUpon>ProyectoActualizado.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="RamasCientificas.aspx.cs">
+      <DependentUpon>RamasCientificas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="RamasCientificas.aspx.designer.cs">
+      <DependentUpon>RamasCientificas.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Roles.aspx.cs">
+      <DependentUpon>Roles.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Roles.aspx.designer.cs">
+      <DependentUpon>Roles.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="RolesEditar.aspx.cs">
+      <DependentUpon>RolesEditar.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="RolesEditar.aspx.designer.cs">
+      <DependentUpon>RolesEditar.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -96,6 +136,7 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+    <Content Include="Web.sitemap" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
