--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -42,9 +42,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BitacoraExperimentalLog.cs" />
+    <Compile Include="BitadocasLog.cs" />
     <Compile Include="ConsecutivosLog.cs" />
+    <Compile Include="DescargasLog.cs" />
+    <Compile Include="ErroresLog.cs" />
+    <Compile Include="ExperimentosLog.cs" />
     <Compile Include="NivelAcademicoLog.cs" />
+    <Compile Include="PrivilegiosLog.cs" />
+    <Compile Include="PrivilegiosUsuariosLog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProyectosLog.cs" />
+    <Compile Include="PuestosLog.cs" />
+    <Compile Include="RamasCientificasLog.cs" />
+    <Compile Include="TipoConsecutivoLog.cs" />
     <Compile Include="UsuariosLog.cs" />
   </ItemGroup>
   <ItemGroup>
